# langserver

./: LICENSE  README.md  pyproject.toml
tests/: test_turtle_language_server.py
turtle_language_server/: __init__.py  entry.py  server.py
