[tool.poetry]
name = "turtle-language-server"
version = "0.1.0"
description = ""
authors = ["Gabe Fierro <gtfierro@cs.berkeley.edu>"]

[tool.poetry.scripts]
turtle_langserver = "turtle_language_server.entry:main"

[tool.poetry.dependencies]
python = "^3.8"
pygls = "^0.9.1"
rdflib = "^5.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
